#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-02
2013-10-02 Andy Salnikov
- regenerate whole thing from psddldata V00-04-45 with psddl V00-08-18

Tag: V00-03-01
2013-09-24 Andy Salnikov
- fix missing constructor definition

Tag: V00-03-00
2013-09-24 Andy Salnikov
- regenerate whole thing from psddldata V00-04-38 with psddl V00-08-15

Tag: V00-02-05
2013-08-14 Andy Salnikov
- regenerate whole thing from psddldata V00-04-30

Tag: V00-02-04
2013-08-05 Andy Salnikov
- fix compilation warnings about signed/unsigned comparison

Tag: V00-02-03
2013-08-01 Andy Salnikov
- re-generate everyhting with psddl V00-08-09
- HDF5 writing support should be complete (hopefully), but there may be
  a bunch of new bugs here

Tag: V00-02-02
2013-07-29 Andy Salnikov
- re-generate everyhting with psddl V00-08-08

Tag: V00-02-01
2013-07-03 Andy Salnikov
- bug fix - forgot to implement default ctor in 
  ns_ClockTime_v0::dataset_data class

Tag: V00-02-00
2013-07-02 Andy Salnikov
- re-generate everyhting with psddl V00-07-01
- started adding code for storing the data in HDF5

Tag: V00-01-32
2013-05-22 Andy Salnikov
- fixing doxygen comments

Tag: V00-01-31
2013-05-22 Andy Salnikov
- regenerate whole thing from psddldata V00-04-28

Tag: V00-01-30
2013-05-15 Andy Salnikov
- regenerate whole thing from psddldata V00-04-27
- ne package imp

Tag: V00-01-29
2013-04-25 Andy Salnikov
- one additional change needed for new cspad config type

Tag: V00-01-28
2013-04-25 Andy Salnikov
- regenerate whole thing from psddldata V00-04-26

Tag: V00-01-27
2013-04-23 Andy Salnikov
- regenerate whole thing from psddldata V00-04-25