@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-03
+2013-10-07 Andy Salnikov
+- fix the name of the dataset for Alias.ConfigV1
+
 Tag: V00-03-02
 2013-10-02 Andy Salnikov
 - regenerate whole thing from psddldata V00-04-45 with psddl V00-08-18
